--- a/apps/v-next/package.json
+++ b/apps/v-next/package.json
@@ -17,7 +17,10 @@
     "lucide-react": "~0.407.0",
     "@shared/consts": "workspace:*",
     "ahooks": "~3.8.0",
-    "@shared/github-api": "workspace:*"
+    "@shared/github-api": "workspace:*",
+    "next-share": "~0.27.0",
+    "react-hot-toast": "~2.4.1",
+    "canvas-confetti": "~1.9.3"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -28,6 +31,7 @@
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
-    "tailwindcss-animated": "~1.1.2"
+    "tailwindcss-animated": "~1.1.2",
+    "@types/canvas-confetti": "~1.6.4"
   }
 }
