--- a/common/git-hooks/commit-msg.sample
+++ b/common/git-hooks/commit-msg.sample
@@ -18,10 +18,10 @@
 
 # This example enforces that commit message should contain a minimum amount of
 # description text.
-if [ `cat $1 | wc -w` -lt 3 ]; then
+if [ $(cat $1 | wc -w) -lt 3 ]; then
   echo ""
   echo "Invalid commit message: The message must contain at least 3 words."
-	exit 1
+  exit 1
 fi
 
 node common/scripts/install-run-rush.js commitlint --edit $1
