--- a/.github/workflows/v-next.yml
+++ b/.github/workflows/v-next.yml
@@ -24,6 +24,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: ls && pwd
-      - run: source ~/.bashrc && nvm use && rush install
+      - run: rush install
       - run: rush build -to v-next
       - run: pm2 restart v-next
