--- a/.github/workflows/v-next.yml
+++ b/.github/workflows/v-next.yml
@@ -16,18 +16,8 @@ jobs:
     strategy:
       matrix:
         node-version: [20.14.0]
-    env:
-      AUTH_SECRET: ${{secrets.AUTH_SECRET}}
-      AUTH_GITHUB_ID: ${{secrets.AUTH_GITHUB_ID}}
-      AUTH_GITHUB_SECRET: ${{secrets.AUTH_GITHUB_SECRET}}
-      AUTH_TRUST_HOST: ${{secrets.AUTH_TRUST_HOST}}
     steps:
       - uses: actions/checkout@v4
       - run: rush install
       - run: rush build --to v-next
-      - run: |
-          pm2 set v-next:AUTH_SECRET ${{ secrets.AUTH_SECRET }}
-          pm2 set v-next:AUTH_GITHUB_ID ${{ secrets.AUTH_GITHUB_ID }}
-          pm2 set v-next:AUTH_GITHUB_SECRET ${{ secrets.AUTH_GITHUB_SECRET }}
-          pm2 set v-next:AUTH_TRUST_HOST ${{ secrets.AUTH_TRUST_HOST }}
-          pm2 restart v-next --update-env
+      - run: pm2 restart v-next
