--- a/.github/workflows/v-next.yml
+++ b/.github/workflows/v-next.yml
@@ -19,5 +19,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: rush install
-      - run: rush build --to v-next
+      - run: rush build
+
+      - name: restart pm2
+        run: cd /home/qyy/actions-runner/_work/delete-github-repos-in-batches/delete-github-repos-in-batches
       - run: pm2 restart v-next
