ci: add ntfy notification

--- a/.github/workflows/v-next.yml
+++ b/.github/workflows/v-next.yml
@@ -20,7 +20,11 @@ jobs:
       - uses: actions/checkout@v4
       - run: rush install
       - run: rush build
+        continue-on-error: true
 
       - name: restart pm2
         if: always()
         run: pm2 restart v-next
+      - name: Nofity to ntfy
+        if: always()
+        run: curl -d "v-next project restart success!!!" ntfy.sh/aaron-conlon
