ci(seo): add sitemap and modify ci script

--- a/.github/workflows/v-next.yml
+++ b/.github/workflows/v-next.yml
@@ -19,6 +19,8 @@ jobs:
         node-version: [20.14.0]
     steps:
       - uses: actions/checkout@v4
+      - run: git pull
+
       - run: rush install
       - run: rush build
         # continue-on-error: true
