--- a/.github/workflows/v-next.yml
+++ b/.github/workflows/v-next.yml
@@ -21,13 +21,7 @@ jobs:
       - uses: actions/checkout@v4
       - run: git pull
 
-      - run: rush install
-      - run: rush build
-        # continue-on-error: true
-
-      - name: restart pm2
-        if: always()
-        run: pm2 restart v-next
+      - run: bash ./update.sh
       - name: Nofity to ntfy
         if: always()
-        run: curl -d "🚀 v-next project restart success!!!" ntfy.sh/aaron-conlon
+        run: curl -d "🚀 v-next project restart..." ntfy.sh/aaron-conlon
